--- a/Frontend/css/todos.css
+++ b/Frontend/css/todos.css
@@ -176,6 +176,36 @@ button.small-btn {
   text-decoration-line: line-through;
   text-decoration-color: red; 
   color: #ffd1d9;
-  opacity: 1.0;
+  opacity: 0.6;
 }
+.bottom-bar {
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto 20px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #e8e0ff;
+    font-size: 18px;
+    gap:5px;
+}
+
+.logout-btn {
+    padding: 8px 15px;
+    background: rgba(255, 80, 120, 0.6);
+    border: none;
+    border-radius: 30px;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(255, 80, 120, 0.6);
+    transition: 0.3s ease;
+    backdrop-filter: blur(5px);
+    width: 10%;
+}
+
+.logout-btn:hover {
+    background: rgba(255, 80, 120, 0.85);
+    box-shadow: 0 0 14px rgba(255, 80, 120, 0.9);
+}
+
 
